2009-05-05  Murray Cumming  <murrayc@murrayc.com>

	* gdk/gdkmm/general.[h|cc]:
	* gdk/src/event.hg:
	* gtk/gtkmm/comboboxentrytext.[h|cc]:
	* gtk/gtkmm/comboboxtext.[h|cc]:
	* gtk/src/icontheme.hg:
	* gtk/src/menuitem.hg:
	* gtk/src/treeview.hg: Removed more deprecated methods.

2009-05-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filechooser.hg: Use std::string for filenames, instead of ustring, 
	fixing bug #142138.

2009-05-01  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/*.[hg|ccg]:
	* gtk/src/*.[hg|ccg]: Removed most deprecated methods.

2009-05-01  Murray Cumming  <murrayc@murrayc.com>

	Removed deprecated classes.
	
	* gtk/src/combo.[hg|ccg]:
	* gtk/src/fileselection.[hg|ccg]:
	* gtk/src/optionmenu.[hg|ccg]:
	* gtk/src/progress.[hg|ccg]:
	* gtk/src/tooltips.[hg|ccg]: Removed these deprecated classes.
	* gtk/src/inputdialog.[hg|ccg]:
	* gtk/src/menutoolbutton.[hg|ccg]:	
	* gtk/src/eventbox.[hg|ccg]:
	* gtk/src/toolitem.[hg|ccg]:
	* gtk/src/toolbart.[hg|ccg]: Removed uses of these classes.

2009-04-30  Murray Cumming  <murrayc@murrayc.com>

	Inherit Buildable.
	
	* gtk/src/buildable.[hg|ccg]: Added this interface.
	* gtk/src/action.[hg|ccg]:
	* gtk/src/actiongroup.[hg|ccg]:
	* gtk/src/liststore.[hg|ccg]:
	* gtk/src/sizegroup.[hg|ccg]:
	* gtk/src/treestore.[hg|ccg]:
	* gtk/src/widget.[hg|ccg]: Inherit and Implement Buildable.
		
2009-04-30  Murray Cumming  <murrayc@murrayc.com>

	Inherit Activatable, and some build fixes.
	
	* gtk/src/button.hg:
	* gtk/src/menuitem.hg:
	* gtk/src/recentchoosermenu.hg:
	* gtk/src/toolbutton.hg:
	* gtk/src/toolitem.hg: Inherit and Implement Activatable.
	
	* gtk/src/iconview.hg:
	* gtk/src/treeviewcolumn.hg:
	* gtk/src/entrycompletion.hg: Correct the _IMPLEMENTS_INTERFACE() spelling to 
		fix the build.
	* gtk/src/separator.hg: Include orientable.h to fix the build.

2009-04-28  Murray Cumming  <murrayc@murrayc.com>

	Fixed build, plus some const changes.
