@@ -171,6 +171,8 @@ gtk/gtkmm/bin.cc
 gtk/gtkmm/bin.h
 gtk/gtkmm/box.cc
 gtk/gtkmm/box.h
+gtk/gtkmm/border.cc
+gtk/gtkmm/border.h
 gtk/gtkmm/builder.cc
 gtk/gtkmm/builder.h
 gtk/gtkmm/button.cc
