@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\gtk\gtkmm\border.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\..\gtk\gtkmm\box.cc"
 				>
 			</File>
