@@ -1,0 +1,45 @@
+/* border.h
+ *
+ * Copyright 2009 The gtkmm Development Team
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free
+ * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+_DEFS(gtkmm,gtk)
+
+namespace Gtk
+{
+
+class Border
+{
+  _CLASS_BOXEDTYPE(Border, GtkBorder, gtk_border_new, gtk_border_copy, gtk_border_free)
+public:
+
+  _MEMBER_GET(left, left, int, gint)
+  _MEMBER_SET(left, left, int, gint)
+
+  _MEMBER_GET(right, right, int, gint)
+  _MEMBER_SET(right, right, int, gint)
+
+  _MEMBER_GET(top, top, int, gint)
+  _MEMBER_SET(top, top, int, gint)
+
+  _MEMBER_GET(bottom, bottom, int, gint)
+  _MEMBER_SET(bottom, bottom, int, gint)
+};
+
+} /* namespace Gtk */
+
+
