@@ -25,6 +25,7 @@ gtkmm_files_any_hg =		\
 	aspectframe.hg		\
 	assistant.hg		\
 	bin.hg			\
+	border.hg		\
 	box.hg			\
 	buildable.hg		\
 	builder.hg		\
